Completed the project - Fixed some ugly places that I didn't notice that other time - Fixed the padding for every element so the dark background color was seen eerywhere - Fixed Sign up form using gap, I'm not sure if it's the best way to do it I'm not really satisfied with quote not being centralized so maybe change that in future

--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: content-box;
+  box-sizing:border-box ;
 }
 
 body {
@@ -9,7 +9,11 @@ body {
   background-color: #1f2937;
   display: flex;
   flex-direction: column;
-  margin: 0 130px;
+  /* 130px */
+}
+
+body > *{
+  padding: 0 130px;
 }
 
 .top-container,
@@ -52,7 +56,9 @@ header > a {
 .top-container {
   display: flex;
   justify-content: space-between;
-  padding: 40px 0;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  /* instead of padding: 40px 0 because it overrides body > * padding */
 }
 
 .top-container > img {
@@ -76,14 +82,20 @@ header > a {
 }
 
 main {
+  padding: 0;
   background-color: #f9faf8;
   display: flex;
   flex-direction: column;
 }
 
+.pre-quote{
+  padding: 0 130px;
+}
+
 .top-text {
   text-align: center;
   padding-top: 30px;
+  margin-bottom: 40px;
   font-size: 36px;
   font-weight: 700;
 }
@@ -108,7 +120,8 @@ main {
 }
 
 .quote {
-  padding: 200px;
+  padding: 200px 0;
+  flex: 1;
   background-color: #e5e7eb;
   display: flex;
   justify-content: center;
@@ -138,20 +151,13 @@ main {
 
 .sign-up-form{
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 60px 150px;
-  /* gap: 160px; */
-  color: #f9faf8;
+  padding: 60px 40px;
+  gap: 140px;
 
+  color: #f9faf8;
   border-style: none;
   border-radius: 11px;
   background-color: #3882f6;
-}
-
-
-.sign-up-text > strong{
-  
 }
 
 .sign-up-form > .sign-up-btn{
@@ -159,8 +165,15 @@ main {
   border-color: #f9faf8;
 }
 
+.sign-up-text{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
 
 footer{
-  padding: 20px 0;
-  justify-self: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: center;
 }
